``` feat(搜索): 新增高级过滤、导出增强与分页加载功能
- 新增高级过滤：支持按域名/一级目录/目录关键字/时间范围过滤,可与搜索组合使用
- 新增导出选项：支持导出"当前筛选结果/全量",支持"保留目录结构/平铺导出"
- 结果列表支持分页加载(默认 50 条,逐步加载更多)
- 增强导入/合并阶段加载状态提示,处理期间禁用相关交互避免重复触发
- 新增 `merging`/`stage` 状态字段,细化处

--- a/changelog/2025-12-18.md
+++ b/changelog/2025-12-18.md
@@ -16,6 +16,13 @@
   - 支持拖拽导入书签 HTML 文件（含拖拽态视觉反馈）。
   - 新增“已导入文件”列表（按来源文件聚合统计）。
   - 支持移除单个来源文件（从待合并原始数据中剔除，并提示重新合并）。
+  - 增加更细的导入/合并阶段加载状态提示，并在处理期间禁用相关交互避免重复触发。
 
 - **P0：搜索体验升级（搜索页面）**
   - 搜索结果命中词高亮（标题 / URL / 路径）。
+
+- **P0：高级过滤 + 导出增强（搜索页面）**
+  - 新增高级过滤：按域名 / 一级目录 / 目录关键字 / 时间范围过滤（可与搜索组合）。
+  - 新增导出选项：支持导出“当前筛选结果 / 全量”。
+  - 新增导出选项：支持“保留目录结构 / 平铺导出（不保留目录）”。
+  - 结果列表支持分页加载（默认 50 条，逐步加载更多）。
