``` docs(文档): 同步搜索高级过滤与导出增强描述，优化路由懒加载降低包体
- 更新 FEATURES/QUICKSTART：补齐搜索页高级过滤（域名/目录/时间范围）与导出增强（全量/筛选、保留/平铺目录）描述
- 更新 README：精简"快速开始/典型流程"，统一指向 QUICKSTART；Roadmap 收敛为概览并指向 PRD
- 更新 docs/README.md：补充 README/QUICKSTART/FEATURES 统一入口链接
- 更新 changelog/2025-12-18.md：记录文档对

--- a/changelog/2025-12-18.md
+++ b/changelog/2025-12-18.md
@@ -6,11 +6,14 @@
   - 新增 `docs/README.md` 作为文档入口。
   - 新增 `docs/PRD.md`：完成 Roadmap 范围裁剪（P0/P1/P2/归档）与验收标准。
   - 新增 `docs/DESIGN.md`：补齐分层架构、数据流、模块边界与后续设计要点。
+  - 扩展 `docs/README.md`：补充 README / QUICKSTART / FEATURES 的统一入口链接。
 
 - **对外文档对齐（README/FEATURES/QUICKSTART）**
   - README：新增 docs 入口；移除 Cytoscape 描述；更新 AI 描述与 Roadmap（P0/P1/P2）；修正 `lint` 脚本说明。
   - FEATURES：同步拖拽导入/搜索高亮的实现状态；更新 AI 路线为“本地报告模板 + 可复制 Prompt → 适配器式 BYOK”。
   - QUICKSTART：补充 docs 入口；同步拖拽与 AI 描述；更新备份说明（P1 备份与恢复后置）。
+  - README：精简“快速开始/典型流程”，统一指向 QUICKSTART；Roadmap 收敛为概览并指向 PRD。
+  - FEATURES / QUICKSTART：补齐搜索页高级过滤与导出增强（全量/筛选、保留/平铺目录）描述，避免与实际功能不一致。
 
 - **P0：导入体验补齐（上传合并）**
   - 支持拖拽导入书签 HTML 文件（含拖拽态视觉反馈）。
@@ -26,3 +29,8 @@
   - 新增导出选项：支持导出“当前筛选结果 / 全量”。
   - 新增导出选项：支持“保留目录结构 / 平铺导出（不保留目录）”。
   - 结果列表支持分页加载（默认 50 条，逐步加载更多）。
+
+- **工程化：回归验证与包体优化**
+  - `npm run typecheck` / `npm run build` 通过。
+  - 路由页改为 `React.lazy` + `Suspense` 按需加载，降低首屏包体并缓解构建产物 chunk 过大告警。
+  - `Chart` 组件对 `echarts` 采用动态 `import()`，将图表依赖变为按需加载，进一步降低页面 chunk 体积。
